about subnav was getting cut off - right:10px should fix

--- a/web/static/css/responsive.css
+++ b/web/static/css/responsive.css
@@ -281,6 +281,7 @@ p.subhead {
   float: none;
   text-align: center;
   position: relative;
+  right: 10px !important;
 }
 #switcher-panel {
   position: relative;
